# asteroid_2004_VG64

./: CMakeLists.txt  LISENCE-SOFA.md  README.md  main.cpp
data/: ObsCodes.html  finals.data.iau2000.txt  observations.txt
include/: data_reader.hpp  ephaccess.h  ephemeris.hpp  geometry.hpp  observatories.hpp  reader_obs.h  rk4Integrator.hpp  util.h  util.hpp
src/: data_reader.cpp  ephemeris.cpp  geometry.cpp  observatories.cpp  reader_obs.cpp  rk4Integrator.cpp  util.cpp
